Completed about page and fixed spacing issues

--- a/_sass/_begin.scss
+++ b/_sass/_begin.scss
@@ -15,6 +15,7 @@ img, embed, object, video {
 
 main {
 	overflow-x: hidden;
+	margin-bottom: 2em;
 }
 
 //
